Add new properties style and remove properties unused

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,9 +15,13 @@
   <custom-style>
     <style is="custom-style">
       .table{
-        --stripped-table-header-background-color:#38affb;
-        --stripped-table-header-color:#fff;
-        --stripped-table-body-background-color:#ffb6fe;
+        --stripped-table-header-custom:{
+          background-color: #38affb;
+          color: #fff;
+        };
+        --striped-table-body-custom: {
+          background-color:#ffb6fe;
+        };
       }
       .blockInfo{
         border: 0.1em solid black;
