--- a/demo/index.html
+++ b/demo/index.html
@@ -7,28 +7,35 @@
 
   <title>responsive-table demo</title>
 
-  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
-  <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-  <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-  <link rel="import" href="../responsive-table.html">
+  <script type="module">
+    import '@polymer/iron-demo-helpers/demo-pages-shared-styles';
+    import '@polymer/iron-demo-helpers/demo-snippet';
+  </script>
+
+  <script type="module" src="../responsive-table.js"></script>
+
   <custom-style>
-    <style is="custom-style">
-      .table{
-        --stripped-table-header-custom:{
+    <style>
+      .table {
+        --stripped-table-header-custom: {
           background-color: #38affb;
           color: #fff;
         };
+
         --striped-table-body-custom: {
-          background-color:#ffb6fe;
+          background-color: #ffb6fe;
         };
       }
-      .blockInfo{
+
+      .blockInfo {
         border: 0.1em solid black;
         padding: 10px 5px;
         word-break: break-all;
       }
-      .block{
+
+      .block {
         margin: 10px auto;
       }
     </style>
@@ -37,7 +44,7 @@
 
 <body>
   <div class="vertical-section-container centered">
-    <h3>Basic responsive-table demo</h3>
+    <h3>responsive-table demo</h3>
     <demo-snippet>
       <template>
         <div class="block">
