--- a/test/responsive-table_test.html
+++ b/test/responsive-table_test.html
@@ -7,13 +7,22 @@
 
   <title>responsive-table test</title>
 
-  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-  <script src="../../web-component-tester/browser.js"></script>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../node_modules/@polymer/test-fixture/test-fixture.js"></script>
+  <script src="../node_modules/mocha/mocha.js"></script>
+  <script src="../node_modules/chai/chai.js"></script>
+  <script src="../node_modules/wct-mocha/wct-mocha.js"></script>
 
-  <link rel="import" href="../responsive-table.html">
+  <script type="module" src="../responsive-table.js"></script>
 </head>
 
 <body>
+
+  <test-fixture id="CountElements">
+    <template>
+      <responsive-table></responsive-table>
+    </template>
+  </test-fixture>
 
   <test-fixture id="CountElements">
     <template>
